--- a/raidcal/maincal/templates/maincal/index.html
+++ b/raidcal/maincal/templates/maincal/index.html
@@ -1,8 +1,8 @@
 {% extends "maincal/base.html" %}
-{% load static %}
+{% load i18n %}
 
 {% block title %}
-{{ block.super }}
+{% trans "Calendar" %} - {{ block.super }}
 {% endblock %}
 
 {% block jquery %}
@@ -12,7 +12,7 @@
 {% block content %}
 {{ block.super }}
 <div class="col-sm-6">
-    <h1>Calendar</h1>
+    <h1>{% trans "Calendar" %}</h1>
     <p>
     Calendar goes here.
     </p>
