--- a/raidcal/maincal/templates/maincal/logged_out.html
+++ b/raidcal/maincal/templates/maincal/logged_out.html
@@ -1,19 +1,18 @@
 {% extends "maincal/base.html" %}
-{% load i18n crispy_forms_tags %}
+{% load i18n %}
 
 {% block title %}
-{% trans "Login" %} - {{ block.super }}
+{% trans "Logged out" %} - {{ block.super }}
 {% endblock %}
 
 {% block jquery %}
 {{ block.super }}
-    $('form.uniForm').uniform();
 {% endblock %}
 
 {% block content %}
 {{ block.super }}
 <div class="col-sm-6">
-    <h1>{% trans "Login" %}</h1>
-    {% crispy login_form login_form.helper %}
+    <h1>{% trans "Logged out" %}</h1>
+    <p>{% trans "You succesfully logged out." %}</p>
 </div>
 {% endblock %}
