Tweaks and style corrections.

--- a/raidcal/maincal/templates/maincal/register.html
+++ b/raidcal/maincal/templates/maincal/register.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 {{ block.super }}
-<div class="col-sm-6">
+<div class="col-sm-6 col-lg-5">
     <h1>{% trans "Register" %}</h1>
     {% crispy register_form register_form.helper %}
 </div>
