--- a/raidcal/maincal/templates/maincal/base.html
+++ b/raidcal/maincal/templates/maincal/base.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html>{% load static i18n %}
+<!DOCTYPE html>{% load static i18n compress %}
 <html>
 <head>
     <meta charset="utf-8" />
     <title>{% block title %}RaidCal{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap-3.3.5/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap-3.3.5/css/bootstrap-theme.min.css' %}">
-    <script type="text/javascript" src="{% static 'maincal/libs/jquery-2.1.4/jquery-2.1.4.min.js' %}" defer></script>
-    <script type="text/javascript" src="{% static 'maincal/libs/bootstrap-3.3.5/js/bootstrap.min.js' %}" defer></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap/dist/css/bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap/dist/css/bootstrap-theme.css' %}">
+    {% compress css %}
+    <link rel="stylesheet" type="text/x-scss" href="{% static 'maincal/style/style.scss' %}">
+    {% endcompress %}
+
+    <script type="text/javascript" src="{% static 'maincal/libs/jquery/dist/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'maincal/libs/jquery-migrate/jquery-migrate.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'maincal/libs/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'maincal/libs/moment/min/moment-with-locales.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'maincal/libs/underscore/underscore-min.js' %}"></script>
+
+    {% block head %}{% endblock %}
 
     <script type="text/javascript">
     $(function() {
@@ -46,10 +55,6 @@
         </div>
     </div>
 </nav>
-<div class="container-fluid">
-    <div class="row">
 {% block content %}{% endblock %}
-    </div>
-</div>
 </body>
 </html>
