--- a/raidcal/maincal/static/maincal/style/style.scss
+++ b/raidcal/maincal/static/maincal/style/style.scss
@@ -2,3 +2,21 @@
   margin-left: 30px;
   margin-right: 10px;
 }
+
+.float-right {
+  float: right;
+}
+
+.float-left {
+  float: left;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 1.8em;
+}
+
+h2 {
+  margin-top: 0.1em;
+  font-size: 1.4em;
+}
