--- a/raidcal/maincal/templates/maincal/index.html
+++ b/raidcal/maincal/templates/maincal/index.html
@@ -16,12 +16,48 @@
 
 {% block jquery %}
 {{ block.super }}
+    String.prototype.capitalize = function() {
+        return this.charAt(0).toUpperCase() + this.slice(1);
+    }
+
     var calendar = $('#calendar').calendar({
         language: '{{ language_code }}',
+        view: 'month',
         events_source: '{% url 'api_event' %}',
         tmpl_path: '{% static 'maincal/libs/bootstrap-calendar/tmpls/' %}',
-        modal: '#events-modal'
+        tmpl_cache: false,
+        modal: '#events-modal',
+        time_start: '12:00',
+		time_end: '24:00',
+		time_split: '30',
+        onAfterEventsLoad: function(events) {
+			if(!events) {
+				return;
+			}
+		},
+		onAfterViewLoad: function(view) {
+            $('#cal_title').text(this.getTitle().capitalize());
+			$('.btn-group button').removeClass('active');
+			$('button[data-calendar-view="' + view + '"]').addClass('active');
+		},
+		classes: {
+			months: {
+				general: 'label'
+			}
+		}
     });
+	$('.btn-group button[data-calendar-nav]').each(function() {
+		var $this = $(this);
+		$this.click(function() {
+			calendar.navigate($this.data('calendar-nav'));
+		});
+	});
+	$('.btn-group button[data-calendar-view]').each(function() {
+		var $this = $(this);
+		$this.click(function() {
+			calendar.view($this.data('calendar-view'));
+		});
+	});
 {% endblock %}
 
 {% block content %}
@@ -43,8 +79,42 @@
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-xs-12">
             <h1>{% trans "Calendar" %}</h1>
+        </div>
+    </div>
+    {% if top_decoration %}
+    <div class="row">
+        <div class="col-sm-8">
+            <p class="alert alert-info">{{ top_decoration.content }}</p>
+        </div>
+    </div>
+    {% endif %}
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="input-group">
+                <h2 id="cal_title">Today</h2>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="btn-group">
+                <button class="btn btn-primary" data-calendar-nav="prev">{% trans 'Prev' %}</button>
+                <button class="btn btn-default" data-calendar-nav="today">{% trans 'Today' %}</button>
+                <button class="btn btn-primary" data-calendar-nav="next">{% trans 'Next' %}</button>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-warning" data-calendar-view="year">{% trans 'Year' %}</button>
+                <button class="btn btn-warning active" data-calendar-view="month">{% trans 'Month' %}</button>
+				<button class="btn btn-warning" data-calendar-view="week">{% trans 'Week' %}</button>
+				<button class="btn btn-warning" data-calendar-view="day">{% trans 'Day' %}</button>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <br />
             <div id="calendar"></div>
         </div>
     </div>
