Show signed people.

--- a/raidcal/maincal/templates/maincal/index.html
+++ b/raidcal/maincal/templates/maincal/index.html
@@ -30,6 +30,7 @@
         time_start: '12:00',
 		time_end: '24:00',
 		time_split: '30',
+        modal_title: function(event) { return event.title },
         onAfterEventsLoad: function(events) {
 			if(!events) {
 				return;
