--- a/raidcal/maincal/templates/maincal/event.html
+++ b/raidcal/maincal/templates/maincal/event.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>{% load static i18n %}
+<!DOCTYPE html>{% load static i18n compress %}
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,26 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap/dist/css/bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap/dist/css/bootstrap-theme.css' %}">
+    {% compress css %}
+    <link rel="stylesheet" type="text/x-scss" href="{% static 'maincal/style/style.scss' %}">
+    {% endcompress %}
 </head>
 <body>
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-xs-6"><strong>{% trans "Event name" %}</strong></div>
-        <div class="col-xs-6">{{ event.name }}</div>
+    <div class="row padding-5">
+        <div class="col-xs-3"><strong>{% trans "Event starts" %}</strong></div>
+        <div class="col-xs-9">{{ event.start|date:"d.m.Y H:i" }}</div>
     </div>
-    <div class="row">
-        <div class="col-xs-6"><strong>{% trans "Event starts" %}</strong></div>
-        <div class="col-xs-6">{{ event.start }}</div>
+    <div class="row padding-5">
+        <div class="col-xs-3"><strong>{% trans "Event ends" %}</strong></div>
+        <div class="col-xs-9">{{ event.end|date:"d.m.Y H:i" }}</div>
     </div>
-    <div class="row">
-        <div class="col-xs-6"><strong>{% trans "Event ends" %}</strong></div>
-        <div class="col-xs-6">{{ event.end }}</div>
+    <div class="row padding-5">
+        <div class="col-xs-3"><strong>{% trans "Description" %}</strong></div>
+        <div class="col-xs-9">{{ event.description }}</div>
     </div>
-    <div class="row">
-        <div class="col-xs-12"><strong>{% trans "Description" %}</strong></div>
+    <div class="row padding-5">
+        <div class="col-xs-3"><strong>{% trans "Signups" %}</strong></div>
+        <div class="col-xs-9">
+            <ol>
+            {% for user in users %}
+                <li class="col-xs-6">{{ user.user.username }}</li>
+            {% endfor %}
+            </ol>
+        </div>
     </div>
-    <div class="row">
-        <div class="col-xs-12">{{ event.description }}</div>
-    </div>
+</div>
 </body>
 </html>
