--- a/raidcal/maincal/templates/maincal/index.html
+++ b/raidcal/maincal/templates/maincal/index.html
@@ -73,7 +73,7 @@
             <div class="modal-body" style="height: 400px">
             </div>
             <div class="modal-footer">
-                <a href="#" data-dismiss="modal" class="btn">Close</a>
+                <a href="#" data-dismiss="modal" class="btn btn-warning">Close</a>
             </div>
         </div>
     </div>
