Fix problems with signups list

--- a/raidcal/maincal/templates/maincal/event.html
+++ b/raidcal/maincal/templates/maincal/event.html
@@ -33,7 +33,7 @@
             {% if users %}
             <ol>
             {% for user in users %}
-                <li class="col-xs-6">{{ user.user.username }}</li>
+                <li>{{ user.user.username }}</li>
             {% endfor %}
             </ol>
             {% else %}
