--- a/raidcal/maincal/templates/maincal/event.html
+++ b/raidcal/maincal/templates/maincal/event.html
@@ -50,7 +50,7 @@
     </div>
     <div class="row padding-5">
         <div class="col-xs-4"><strong>{% trans "Description" %}</strong></div>
-        <div class="col-xs-8">{{ event.description }}</div>
+        <div class="col-xs-8">{{ event.description|safe }}</div>
     </div>
 </div>
 </body>
