--- a/raidcal/maincal/templates/maincal/event.html
+++ b/raidcal/maincal/templates/maincal/event.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>{% load static i18n compress %}
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>{% trans "Event" %} - RaidCal</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap/dist/css/bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap/dist/css/bootstrap-theme.css' %}">
-    {% compress css %}
-    <link rel="stylesheet" type="text/x-scss" href="{% static 'maincal/style/style.scss' %}">
-    {% endcompress %}
-
-</head>
-<body>
+{% load static i18n compress %}
 <div class="container-fluid">
     <div class="row padding-5">
         {% if not is_restricted %}
@@ -53,5 +40,3 @@
         <div class="col-xs-8">{{ event.description|safe }}</div>
     </div>
 </div>
-</body>
-</html>
