--- a/raidcal/maincal/templates/maincal/base.html
+++ b/raidcal/maincal/templates/maincal/base.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap/dist/css/bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap/dist/css/bootstrap-theme.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'maincal/libs/bootstrap-calendar/css/calendar.css' %}">
     {% compress css %}
     <link rel="stylesheet" type="text/x-scss" href="{% static 'maincal/style/style.scss' %}">
     {% endcompress %}
@@ -16,7 +17,14 @@
     <script type="text/javascript" src="{% static 'maincal/libs/bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'maincal/libs/moment/min/moment-with-locales.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'maincal/libs/underscore/underscore-min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'maincal/libs/bootstrap-calendar/js/calendar.min.js' %}"></script>
+    {% with 'maincal/libs/bootstrap-calendar/js/language/'|add:language_code|add:'.js' as cal_lang_js %}
+        <script type="text/javascript" src="{% static cal_lang_js %}"></script>
+    {% endwith %}
+
+    {% compress js %}
     <script type="text/javascript" src="{% static 'maincal/js/init.js' %}"></script>
+    {% endcompress %}
 
     {% block head %}{% endblock %}
 </head>
