--- a/raidcal/maincal/templates/maincal/base.html
+++ b/raidcal/maincal/templates/maincal/base.html
@@ -40,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">RaidCal</a>
+            <a class="navbar-brand" href="https://github.com/katajakasa/Raidcal">RaidCal</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
