--- a/raidcal/maincal/templates/maincal/event.html
+++ b/raidcal/maincal/templates/maincal/event.html
@@ -1,4 +1,4 @@
-{% load static i18n compress %}
+{% load static i18n compress sanitize %}
 <div class="container-fluid">
     <div class="row padding-5">
         {% if not is_restricted %}
@@ -37,6 +37,6 @@
     </div>
     <div class="row padding-5">
         <div class="col-xs-4"><strong>{% trans "Description" %}</strong></div>
-        <div class="col-xs-8">{{ event.description|safe }}</div>
+        <div class="col-xs-8">{{ event.description|sanitize_html }}</div>
     </div>
 </div>
