Reorganizing code, add forum + thread.

--- a/raidcal/maincal/static/maincal/style/style.scss
+++ b/raidcal/maincal/static/maincal/style/style.scss
@@ -11,6 +11,14 @@
   float: left;
 }
 
+.align-left {
+  text-align: left;
+}
+
+.align-right {
+  text-align: right;
+}
+
 h1 {
   margin-top: 0;
   font-size: 1.8em;
